--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
             "@php artisan key:generate --ansi"
         ],
 
-        "fix": "vendor/bin/php-cs-fixer fix ./ --config=vendor/arubacao/php-cs-fixer-config/laravel.php_cs -vv",
+        "fix": "vendor/bin/php-cs-fixer fix ./ --config=.php_cs -vv",
 
         "test": "vendor/bin/codecept run",
         "test2": "vendor/bin/codecept run --coverage --coverage-html"
