--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "nunomaduro/larastan": "^0.4.3",
         "phpunit/phpunit": "^7.5"
     },
     "config": {
@@ -62,6 +63,7 @@
         ],
 
         "fix": "vendor/bin/php-cs-fixer fix ./ --config=.php_cs -vv",
+        "stan": "php artisan code:analyse --level=7",
 
         "test": "vendor/bin/codecept run",
         "test2": "vendor/bin/codecept run --coverage --coverage-html"
