--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,7 +48,9 @@ RUN \
     git config core.fileMode false && \
     git pull && \
     composer install && \
-    if [ ! -f /var/www/localhost/htdocs/${DIRECTORY_NAME}/.env ]; then cp /var/www/localhost/htdocs/${DIRECTORY_NAME}/.env.example /var/www/localhost/htdocs/${DIRECTORY_NAME}/.env; fi
+    if [ ! -f /var/www/localhost/htdocs/${DIRECTORY_NAME}/.env ]; then \
+        cp /var/www/localhost/htdocs/${DIRECTORY_NAME}/.env.example \
+        /var/www/localhost/htdocs/${DIRECTORY_NAME}/.env && php artisan key:generate; fi
 
 CMD ["sh", "-c", ": && \
     cd /var/www/localhost/htdocs/${DIRECTORY_NAME} && \
