--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -56,6 +56,8 @@ services:
             git pull &&
 
             composer install &&
+
+            if [ ! -f .env ]; then cp .env.example .env && php artisan key:generate; fi &&
             php artisan migrate:refresh --seed &&
 
             echo '==========================================================================' &&
